# lastfm-status-api

./: .env.example  README.md  activate-venv.sh  pyproject.toml
config/: settings.py
