[project]
name = "lastfm-status-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel William",email = "116318328+miguelwilliam@users.noreply.github.com"}
]
requires-python = "3.13.11"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "django-environ (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
